<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.activities.tambah_buku.TambahBukuActivity"
    android:padding="24dp">

    <EditText
        android:id="@+id/etLinkFotoBuku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link_foto_buku"
        android:inputType="textUri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etJudulBuku"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etJudulBuku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/judul_buku"
        android:inputType="textCapWords"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etLinkFotoBuku"
        app:layout_constraintBottom_toTopOf="@id/etPenerbitBuku"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etPenerbitBuku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_penerbit"
        android:layout_marginTop="20dp"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/etJudulBuku"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etTahunTerbit"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etTahunTerbit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tahun_terbit"
        android:layout_marginTop="20dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etPenerbitBuku"
        app:layout_constraintBottom_toTopOf="@id/etKategoriBuku"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etKategoriBuku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kategori_buku"
        android:layout_marginTop="20dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etTahunTerbit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnTambahBuku"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/btnTambahBuku"
        app:layout_constraintTop_toBottomOf="@id/etKategoriBuku"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/tambah_buku"
        android:textSize="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>